syntax = "proto3";

option go_package = "github.com/nireo/mci/pb";

enum JobStatus {
  PENDING = 0;
  SUCCESS = 1;
  FAILURE = 2;
  IN_PROGRESS = 3;
  ERROR = 4;
}

message Job {
  string repo_url = 1;
  string commit_sha = 2;
  string id = 3;
}

message Log {
  string message = 1;
}

message Empty {}

service Agent {
  rpc ExecuteJob(Job) returns (Empty) {}
}

service Core {
  rpc StreamLogs(stream Log) returns (Empty) {}
}
